cmake_minimum_required(VERSION 3.16)
project(FirstProgram)

set(CMAKE_CXX_STANDARD 14)
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fsanitize=address")
#set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fno-elide-constructors")
include_directories(src)
#link_directories(src)
add_subdirectory(src)
add_subdirectory(test)
add_subdirectory(googletest)
